--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build ./project/. --file Dockerfile --tag noumanhere/flask-blog-app:$(date +%s)
+      run: ls
+#       run: docker build ./project/. --file Dockerfile --tag noumanhere/flask-blog-app:$(date +%s)
