--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: cd project
-      run: docker build . --file Dockerfile --tag noumanhere/flask-blog-app:$(date +%s)
+      run: cd project && docker build . --file Dockerfile --tag noumanhere/flask-blog-app:$(date +%s)
 #       run: docker build ./project/. --file Dockerfile --tag noumanhere/flask-blog-app:$(date +%s)
