--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -13,4 +13,4 @@ RUN pip install -r requirements.txt
 COPY . /app
 
 # configure the container to run in an executed manner
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "-p", "5000"]
+CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
